# VelleyNet_SFML

./: LICENSE  README.md
client/: CMakeLists.txt  CMakeLists_Linux.txt
client/src/: ball.cpp  main.cpp  netWorkManager.cpp  player.cpp  window.cpp
client/src/head/: ball.h  function.h  netWorkManager.h  player.h  window.h
server/: CMakeLists.txt  CMakeLists_Linux.txt
server/src/: ball.cpp  main.cpp  netWorkManager.cpp  player.cpp  window.cpp
server/src/head/: ball.h  netWorkManager.h  player.h  window.h
